Hero height fix on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -255,4 +255,8 @@ a.anchor {
     nav {
         margin-top: 1rem;
     }
+
+    #hero-img {
+        min-height: 1000px;
+    }
 }
